--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -426,36 +426,30 @@ BUTTONS
 }
 
 .homeButtons_dots {
-  z-index: -1;
   position: absolute;
   width: calc(420 * var(--xUnit));
   height: calc(420 * var(--xUnit));
+  z-index: 1
 }
 
 .homeButtons_dots1 {
-  z-index: -1;
-  margin-top: calc(-1900 * var(--xUnit));
-  margin-left: calc(10 * var(--xUnit));
+  top: calc(6230 * var(--xUnit));
+  left: calc(15 * var(--xUnit));
 }
 
 .homeButtons_dots2 {
-  z-index: -1;
-  right: 0;
-  margin-top: calc(-1900 * var(--xUnit));
-  margin-right: calc(10 * var(--xUnit));
+  top: calc(6250 * var(--xUnit));
+  right: calc(15 * var(--xUnit));
 }
 
 .homeButtons_dots3 {
-  z-index: -1;
-  margin-top: calc(-430 * var(--xUnit));
-  margin-left: calc(10 * var(--xUnit));
+  margin-top: calc(-450 * var(--xUnit));
+  margin-left: calc(16 * var(--xUnit));
 }
 
 .homeButtons_dots4 {
-  z-index: -1;
-
-  margin-top: calc(-430 * var(--xUnit));
-  margin-right: calc(10 * var(--xUnit));
+  margin-top: calc(-450 * var(--xUnit));
+  margin-right: calc(16 * var(--xUnit));
   right: 0;
 }
 
